--- a/internal/package.json
+++ b/internal/package.json
@@ -10,7 +10,8 @@
     "author": "Anuv Gupta",
     "license": "ISC",
     "dependencies": {
-        "got": "^11.8.2"
+        "got": "^11.8.2",
+        "ws": "^8.2.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
